--- a/src/styles/sass/partials/components/_MapPage.scss
+++ b/src/styles/sass/partials/components/_MapPage.scss
@@ -21,12 +21,6 @@
 		}
 	}
 
-	.map-page {
-		h1 {
-			margin-bottom: 0px;
-		}
-	}
-
 	footer {
 		color: $clr-black;
 		text-align: center;
@@ -34,6 +28,7 @@
 }
 
 .mag-legend {
+	position: relative;
 	text-align: center;
 	flex-basis: 20%;
 
@@ -63,10 +58,19 @@
 	width: 100%;
 }
 
+.map-title-container {
+	p {
+		margin: 0 0 40px 0;
+	}
+}
+
 .map-page {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	h1 {
+		margin-bottom: 0px;
+	}
 
 	.legend-container {
 		position: absolute;
